<?xml version="1.0"?>
<package format="2">
    <name>roverrobotics_description</name>
    <version>1.0.0</version>
    <description>The roverrobotics_description package</description>

    <!-- One maintainer tag required, multiple allowed, one person per tag -->
    <!-- Example:  -->
    <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
    <maintainer email="will@roverrobotics.com">William Rook</maintainer>


    <!-- One license tag required, multiple allowed, one license per tag -->
    <!-- Commonly used license strings: -->
    <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
    <license>BSD</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>eigen</depend>
    <depend>rclcpp</depend>
    <depend>std_msgs</depend>


    <!-- The export tag contains other, unspecified, tags -->
    <export>
        <!-- Other tools can request additional information be placed here -->

    </export>
</package>
